# Cpp-milltech-

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
.devcontainer/: .clang-format  Dockerfile  apt-packages.in  devcontainer.json
.devcontainer/scripts/: initialize
.github/workflows/: Hw05.yml  build.yml
homework/05/: README.md
homework_04/: CMakeLists.txt
homework_04/data/: combined.txt  straight.txt  turn.txt
homework_04/src/: main.cpp
homework_05/: CMakeLists.txt  README.md
homework_05/data/: bad_invalid_number.txt  bad_missing_field.txt  bad_zero_delta.txt  good.txt
homework_05/include/: telemetry.hpp
homework_05/src/: main.cpp  telemetry.cpp
preps/: README.md  devcontainers-cli.md  linux.md  macos.md  windows.md
